--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "fortran",
     "theme"
   ],
-  "repository": "https://github.com/kbthomp1/fortran-syntax"
+  "repository": "https://github.com/kbthomp1/fortran-syntax",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
